--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "@zoom/videosdk": "^2.1.5",
     "@zoom/videosdk-ui-toolkit": "^2.1.0-1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
